log/build_2024-10-22_07-27-05/my_python_node/stderr.log
Sorry: IndentationError: unexpected indent (listener1 (copy 1).py, line 117)
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 243
    '''
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 303)

